err/redsolutioncms.django-model-url.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_url_methods-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/modelurl'...
Compiling './lib/python3.5/site-packages/modelurl/BeautifulSoup.py'...
***   File "./lib/python3.5/site-packages/modelurl/BeautifulSoup.py", line 448
    raise AttributeError, "'%s' object has no attribute '%s'" % (self.__class__.__name__, attr)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/modelurl/importpath.py'...
***   File "./lib/python3.5/site-packages/modelurl/importpath.py", line 17
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/modelurl/redsolution_setup'...
Listing './lib/python3.5/site-packages/modelurl/redsolution_setup/templates'...
Listing './lib/python3.5/site-packages/modelurl/redsolution_setup/templates/modelurl'...
Listing './lib/python3.5/site-packages/modelurl/redsolution_setup/templates/modelurl/redsolutioncms'...
Compiling './lib/python3.5/site-packages/modelurl/utils.py'...
***   File "./lib/python3.5/site-packages/modelurl/utils.py", line 515
    except ReplaceRedirect, redirect:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redsolutioncms.django_model_url-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urlmethods'...
Compiling './lib/python3.5/site-packages/urlmethods/threadmethod.py'...
***   File "./lib/python3.5/site-packages/urlmethods/threadmethod.py", line 85
    except BaseException, exception:
                        ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
